--- a/.github/workflows/docker_build.yaml
+++ b/.github/workflows/docker_build.yaml
@@ -33,8 +33,6 @@ jobs:
         docker tag "${{ env.DOCKER_REPO }}":latest "${{ env.DOCKER_REPO }}":${{ github.sha }}
         docker push  "${{ env.DOCKER_REPO }}":${{ github.sha }}
 
-
-  Deploy:
     - name: Install Kubectl tool
       uses: azure/setup-kubectl@v2.0
 
@@ -44,6 +42,6 @@ jobs:
         kubeconfig: ${{ secrets.KUBE_CONFIG }}
 
     - name: check the no
-      uses: |
+      run: |
         kubectl get nodes   
         kubectl get pods
